--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body background="">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
   <script src="app.js"></script>
 <h1>Crystals Game</h1>
 <br>
